New cardview design

--- a/app/src/main/res/drawable/high_importance_gradient.xml
+++ b/app/src/main/res/drawable/high_importance_gradient.xml
@@ -2,9 +2,8 @@
 <shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:startColor="@color/highImportance"
-        android:centerColor="@color/highImportance"
+        android:startColor="@color/background"
+        android:centerColor="@color/background"
         android:endColor="@color/highImportance"
-        android:angle="45"
         />
 </shape>
