--- a/app/src/main/res/layout/recyclerview_task_row.xml
+++ b/app/src/main/res/layout/recyclerview_task_row.xml
@@ -21,14 +21,15 @@
             android:id="@+id/taskName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="1dp"
+            android:gravity="start"
             android:padding="12dp"
             android:text="Zadanie\n\nAnaliza matematyczna"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:gravity="start"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.555"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/removeBtn"
             app:layout_constraintStart_toEndOf="@+id/importanceLabel"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -53,6 +54,16 @@
             app:layout_constraintStart_toEndOf="@+id/markFinished"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/removeBtn"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_marginEnd="8dp"
+            android:background="@drawable/ic_delete_32"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
