--- a/app/src/main/res/layout/recyclerview_task_row.xml
+++ b/app/src/main/res/layout/recyclerview_task_row.xml
@@ -18,7 +18,7 @@
         android:background="@color/cardBackground">
 
         <TextView
-            android:id="@+id/taskName"
+            android:id="@+id/testName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="1dp"
