--- a/app/src/main/res/layout/activity_add_subject.xml
+++ b/app/src/main/res/layout/activity_add_subject.xml
@@ -1,200 +1,211 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background">
-
-    <TextView
-        android:id="@+id/headlineTV"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:text="Dodaj nowy przedmiot"
-        android:textColor="@color/textColor"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <EditText
-        android:id="@+id/dateDueTV"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="60dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:hint="ECTS"
-        android:inputType="textPersonName"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:textColor="@color/textColor"
-        android:textColorHint="@color/hintColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constLay" />
-
-    <RadioGroup
-        android:id="@+id/importanceRadioGroup"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5">
-
-        <RadioButton
-            android:id="@+id/normalImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_normal_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-        <RadioButton
-            android:id="@+id/mediumImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_medium_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-        <RadioButton
-            android:id="@+id/highImportance"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_margin="16dp"
-            android:background="@drawable/radio_high_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp" />
-
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:text="Ważność przedmiotu"
-        android:textColor="@color/hintColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.057"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dateDueTV" />
+    android:background="@color/background"
+    android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constLay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testNameTV">
+        android:background="@color/background">
 
-        <CheckBox
-            android:id="@+id/lectureCB"
-            android:layout_width="117dp"
+        <TextView
+            android:id="@+id/headlineTV"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp"
-            android:text="WYKŁAD"
-            android:textAlignment="center"
-            android:textColor="@drawable/radio_text_color"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/exerciseCB"
+            android:layout_marginTop="28dp"
+            android:text="Dodaj nowy przedmiot"
+            android:textColor="@color/textColor"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <CheckBox
-            android:id="@+id/exerciseCB"
-            android:layout_width="117dp"
+
+        <EditText
+            android:id="@+id/dateDueTV"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="48dp"
+            android:background="@drawable/custom_input"
+            android:ems="10"
+            android:hint="ECTS"
+            android:inputType="textPersonName"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/hintColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constLay" />
+
+        <RadioGroup
+            android:id="@+id/importanceRadioGroup"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp"
-            android:text="ĆWICZENIA"
-            android:textAlignment="center"
-            android:textColor="@drawable/radio_text_color"
-            android:textSize="16sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/textView5">
 
-        <CheckBox
-            android:id="@+id/labCB"
-            android:layout_width="117dp"
+            <RadioButton
+                android:id="@+id/normalImportance"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/radio_normal_selector"
+                android:button="@android:color/transparent"
+                android:padding="16dp" />
+
+            <RadioButton
+                android:id="@+id/mediumImportance"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/radio_medium_selector"
+                android:button="@android:color/transparent"
+                android:padding="16dp" />
+
+            <RadioButton
+                android:id="@+id/highImportance"
+                android:layout_width="45dp"
+                android:layout_height="45dp"
+                android:layout_margin="16dp"
+                android:background="@drawable/radio_high_selector"
+                android:button="@android:color/transparent"
+                android:padding="16dp" />
+
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="15dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/radio_selector"
-            android:button="@android:color/transparent"
-            android:padding="16dp"
-            android:text="LAB"
-            android:textAlignment="center"
-            android:textColor="@drawable/radio_text_color"
-            android:textSize="16sp"
-            android:textStyle="bold"
+            android:layout_marginTop="60dp"
+            android:text="Ważność przedmiotu"
+            android:textColor="@color/hintColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.057"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dateDueTV" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constLay"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="horizontal"
+            android:padding="20dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/testNameTV">
+
+            <CheckBox
+                android:id="@+id/exerciseCB"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="40dp"
+                android:background="@drawable/radio_selector"
+                android:button="@android:color/transparent"
+                android:padding="16dp"
+                android:text="ĆWICZENIA"
+                android:textAlignment="center"
+                android:textColor="@drawable/radio_text_color"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.609"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/lectureCB" />
+
+            <CheckBox
+                android:id="@+id/lectureCB"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="4dp"
+                android:layout_marginEnd="40dp"
+                android:background="@drawable/radio_selector"
+                android:button="@android:color/transparent"
+                android:padding="16dp"
+                android:text="WYKŁAD"
+                android:textAlignment="center"
+                android:textColor="@drawable/radio_text_color"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.707"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <CheckBox
+                android:id="@+id/labCB"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginEnd="40dp"
+                android:background="@drawable/radio_selector"
+                android:button="@android:color/transparent"
+                android:padding="16dp"
+                android:text="LABORATORIA"
+                android:textAlignment="center"
+                android:textColor="@drawable/radio_text_color"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.609"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/exerciseCB" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <Button
+            android:id="@+id/nextBtn"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="48dp"
+            android:background="@drawable/next_button"
+            android:text="DALEJ"
+            android:textColor="@color/white"
+            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/exerciseCB"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintHorizontal_bias="0.497"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <EditText
+            android:id="@+id/testNameTV"
+            android:layout_width="300dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="36dp"
+            android:background="@drawable/custom_input"
+            android:ems="10"
+            android:hint="Nazwa przedmiotu"
+            android:inputType="textPersonName"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:textColor="@color/textColor"
+            android:textColorHint="@color/hintColor"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.495"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/headlineTV" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <Button
-        android:id="@+id/nextBtn"
-        android:layout_width="240dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="48dp"
-        android:background="@drawable/next_button"
-        android:text="DALEJ"
-        android:textSize="18sp"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/importanceRadioGroup"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <EditText
-        android:id="@+id/testNameTV"
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="36dp"
-        android:background="@drawable/custom_input"
-        android:ems="10"
-        android:hint="Nazwa przedmiotu"
-        android:inputType="textPersonName"
-        android:textColor="@color/textColor"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:textColorHint="@color/hintColor"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headlineTV" />
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
