--- a/app/src/main/res/layout/activity_add_new_profile.xml
+++ b/app/src/main/res/layout/activity_add_new_profile.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/testNameTV"
+        android:id="@+id/subjectTV"
         android:layout_width="300dp"
         android:layout_height="65dp"
         android:layout_marginTop="60dp"
@@ -56,7 +56,7 @@
         android:textSize="26sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/testNameTV" />
+        app:layout_constraintTop_toBottomOf="@+id/subjectTV" />
 
     <Button
         android:id="@+id/addProfileBtn"
