--- a/app/src/main/res/layout/activity_add_subject.xml
+++ b/app/src/main/res/layout/activity_add_subject.xml
@@ -27,7 +27,7 @@
 
 
         <EditText
-            android:id="@+id/dateDueTV"
+            android:id="@+id/ectsPointsTV"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:layout_marginTop="48dp"
@@ -93,7 +93,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/dateDueTV" />
+            app:layout_constraintTop_toBottomOf="@+id/ectsPointsTV" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constLay"
@@ -107,7 +107,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/testNameTV">
+            app:layout_constraintTop_toBottomOf="@+id/subjectTV">
 
             <CheckBox
                 android:id="@+id/exerciseCB"
@@ -189,7 +189,7 @@
             app:layout_constraintVertical_bias="1.0" />
 
         <EditText
-            android:id="@+id/testNameTV"
+            android:id="@+id/subjectTV"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:layout_marginTop="36dp"
