--- a/app/src/main/res/layout/activity_add_test.xml
+++ b/app/src/main/res/layout/activity_add_test.xml
@@ -160,7 +160,7 @@
             app:layout_constraintTop_toBottomOf="@+id/testDescription" />
 
         <EditText
-            android:id="@+id/testNameTV"
+            android:id="@+id/subjectTV"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:layout_marginTop="36dp"
@@ -221,7 +221,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.057"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/testNameTV" />
+            app:layout_constraintTop_toBottomOf="@+id/subjectTV" />
 
         <TextView
             android:id="@+id/textView13"
