--- a/app/src/main/res/layout/activity_subject_details.xml
+++ b/app/src/main/res/layout/activity_subject_details.xml
@@ -179,7 +179,7 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/returnBtn"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="16dp"
