--- a/app/src/main/res/layout/fragment_lab_info.xml
+++ b/app/src/main/res/layout/fragment_lab_info.xml
@@ -28,7 +28,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
-            android:id="@+id/testNameTV"
+            android:id="@+id/subjectTV"
             android:layout_width="300dp"
             android:layout_height="48dp"
             android:layout_marginTop="60dp"
@@ -69,7 +69,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.108"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/testNameTV" />
+            app:layout_constraintTop_toBottomOf="@+id/subjectTV" />
 
         <EditText
             android:id="@+id/firstWeeks"
