--- a/app/src/main/res/layout/recyclerview_test_row.xml
+++ b/app/src/main/res/layout/recyclerview_test_row.xml
@@ -18,18 +18,18 @@
         android:background="@color/cardBackground">
 
         <TextView
-            android:id="@+id/testName"
+            android:id="@+id/cv_subjectName"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="1dp"
-            android:gravity="start"
+            android:layout_height="0dp"
+            android:breakStrategy="simple"
+            android:gravity="center"
             android:padding="12dp"
-            android:text="Zadanie\n\nAnaliza matematyczna"
+            android:text="Analiza matematyczna"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/removeBtn"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/importanceLabel"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -37,12 +37,11 @@
             android:id="@+id/markFinished"
             android:layout_width="52dp"
             android:layout_height="52dp"
-            android:layout_marginStart="28dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/ic_check_24"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.494" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
             android:id="@+id/importanceLabel"
@@ -59,11 +58,14 @@
             android:id="@+id/removeBtn"
             android:layout_width="52dp"
             android:layout_height="52dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/ic_delete_32"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/markFinished"
+            app:layout_constraintVertical_bias="1.0" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
