--- a/app/src/main/res/layout/activity_subject_details.xml
+++ b/app/src/main/res/layout/activity_subject_details.xml
@@ -80,6 +80,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/radio_selector"
                 android:button="@android:color/transparent"
+                android:clickable="false"
                 android:padding="16dp"
                 android:text="ĆWICZENIA"
                 android:textAlignment="center"
@@ -97,6 +98,7 @@
                 android:layout_height="wrap_content"
                 android:background="@drawable/radio_selector"
                 android:button="@android:color/transparent"
+                android:clickable="false"
                 android:padding="16dp"
                 android:text="WYKŁAD"
                 android:textAlignment="center"
@@ -114,6 +116,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/radio_selector"
                 android:button="@android:color/transparent"
+                android:clickable="false"
                 android:padding="16dp"
                 android:text="LABORATORIA"
                 android:textAlignment="center"
