--- a/app/src/main/res/drawable/ic_arrow_back_24.xml
+++ b/app/src/main/res/drawable/ic_arrow_back_24.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="@android:color/white"
+        android:fillColor="@color/lightButtons"
         android:pathData="M17.77,3.77l-1.77,-1.77l-10,10l10,10l1.77,-1.77l-8.23,-8.23z" />
 </vector>
