--- a/app/src/main/res/drawable/ic_baseline_notes_24.xml
+++ b/app/src/main/res/drawable/ic_baseline_notes_24.xml
@@ -1,10 +1,10 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
+    android:width="42dp"
+    android:height="42dp"
     android:tint="#FFFFFF"
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
         android:fillColor="@color/lightButtons"
-        android:pathData="M9,16.17L4.83,12l-1.42,1.41L9,19 21,7l-1.41,-1.41z" />
+        android:pathData="M3,18h12v-2L3,16v2zM3,6v2h18L21,6L3,6zM3,13h18v-2L3,11v2z" />
 </vector>
