--- a/app/src/main/res/layout/activity_test_info.xml
+++ b/app/src/main/res/layout/activity_test_info.xml
@@ -32,7 +32,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/subjectTV" />
+            app:layout_constraintTop_toBottomOf="@+id/noteTitle" />
 
         <TextView
             android:id="@+id/dateTV"
@@ -56,7 +56,7 @@
             app:layout_constraintTop_toBottomOf="@+id/assignedSubjectTV" />
 
         <TextView
-            android:id="@+id/subjectTV"
+            android:id="@+id/noteTitle"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginStart="35dp"
@@ -77,7 +77,7 @@
             app:layout_constraintTop_toBottomOf="@+id/importanceTV" />
 
         <TextView
-            android:id="@+id/testDescription"
+            android:id="@+id/noteDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="35dp"
@@ -119,7 +119,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/testDescription"
+            app:layout_constraintTop_toBottomOf="@+id/noteDescription"
             app:layout_constraintVertical_bias="1.0">
 
             <Button
