--- a/app/src/main/res/layout/activity_tests_view.xml
+++ b/app/src/main/res/layout/activity_tests_view.xml
@@ -86,7 +86,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addNewTask"
+            app:layout_constraintTop_toBottomOf="@+id/addNewNote"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
@@ -103,7 +103,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/addNewTask"
+            android:id="@+id/addNewNote"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
