--- a/app/src/main/res/layout/recyclerview_test_row.xml
+++ b/app/src/main/res/layout/recyclerview_test_row.xml
@@ -18,7 +18,7 @@
         android:background="@color/cardBackground">
 
         <TextView
-            android:id="@+id/cv_subjectName"
+            android:id="@+id/cv_noteInfo"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:breakStrategy="simple"
@@ -28,10 +28,11 @@
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
+            android:background="@color/cardBackground2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/importanceLabel"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@+id/progressTV" />
 
         <Button
             android:id="@+id/markFinished"
@@ -66,6 +67,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/markFinished"
             app:layout_constraintVertical_bias="1.0" />
+
+        <TextView
+            android:id="@+id/progressTV"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="W trakcie"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:background="@color/cardBackgroundFinished"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/importanceLabel"
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
