--- a/app/src/main/res/layout/activity_note_info.xml
+++ b/app/src/main/res/layout/activity_note_info.xml
@@ -2,7 +2,6 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
@@ -17,15 +16,12 @@
             android:id="@+id/noteTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
             android:layout_marginTop="52dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/custom_textview"
             android:ems="10"
-            android:gravity="center"
+            android:gravity="start"
             android:hint="Tytuł"
-            android:padding="14dp"
             android:inputType="textPersonName"
+            android:padding="14dp"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             android:textColor="@color/textColor"
@@ -41,11 +37,9 @@
             android:id="@+id/noteDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
             android:layout_marginTop="44dp"
-            android:layout_marginEnd="15dp"
-            android:background="@drawable/custom_textview"
             android:ems="10"
+            android:gravity="start"
             android:hint="Opis zadania"
             android:inputType="textCapSentences|textMultiLine"
             android:maxLength="4000"
@@ -55,16 +49,18 @@
             android:textColor="@color/textColor"
             android:textColorHint="@color/hintColor"
             android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/noteTitle" />
+            app:layout_constraintTop_toBottomOf="@+id/noteTitle"
+            app:layout_constraintVertical_bias="0.0" />
 
         <Button
             android:id="@+id/checkBtn"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:layout_marginTop="16dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="28dp"
             android:layout_marginEnd="16dp"
             android:background="@drawable/ic_edit_32"
             app:layout_constraintEnd_toEndOf="parent"
@@ -72,10 +68,10 @@
 
         <Button
             android:id="@+id/backBtn"
-            android:layout_width="42dp"
-            android:layout_height="42dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="28dp"
             android:background="@drawable/ic_arrow_back_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
