--- a/app/src/main/res/drawable/custom_textview.xml
+++ b/app/src/main/res/drawable/custom_textview.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="rectangle">
-            <corners android:radius="5dp" />
+            <corners android:radius="10dp" />
+            <solid android:color="#0E0E0E"/>
             <padding
                 android:bottom="4dp"
                 android:left="4dp"
                 android:right="4dp"
                 android:top="4dp" />
-            <stroke android:color="@color/accentColor" android:width="2dp"/>
         </shape>
     </item>
 </selector>
