--- a/app/src/main/res/layout/activity_notes_view.xml
+++ b/app/src/main/res/layout/activity_notes_view.xml
@@ -14,7 +14,7 @@
         tools:context=".SubjectsView">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tasksRV"
+            android:id="@+id/responsibilitiesRV"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -25,7 +25,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/addNewNote"
+            app:layout_constraintTop_toBottomOf="@+id/addNewBtn"
             app:layout_constraintVertical_bias="0.0" />
 
         <TextView
@@ -42,7 +42,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
-            android:id="@+id/addNewNote"
+            android:id="@+id/addNewBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
